== Firebug Lite 1.2 Change Log ==
2009-02-18 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Fixed issue 1086 - FBLite can now be used locally over HTTPS if firebug.env.css is set.
  
2009-02-17 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Fixed problem with issue 1481 - A DIV was created instead of an IFRAME so the shield was ineffective.
  
2009-02-14 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Issue 1487 - Added firebug.env.liteFilename ... this allows for the renaming of the FBLite script for use in popup windows.

2009-02-12 Azer Koculu <azer@kodfabrik.com>
  * minifier.py, jsmin.py, minify: Added minifier library and compressing scripts.

2009-02-12 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Corrected 2 syntax errors

2009-02-11 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Issue 1400 - firebug.env.override is now false by default ... I have also added
                                  two methods to make it easier for the user to control the console:
                                  firebug.overrideConsole() & firebug.restoreConsole()

2009-02-09 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Issue 1400 - Re-implemented firebug.env.override. Default is now true ... it can only be manually changed in FBLite code.
                                  The reason this is needed is because a number of browsers have a window.console object.

2009-02-08 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Issue 1406 - Added firebug.env.hideDOMFunctions to allow hiding of DOM functions in the DOM tab.

2009-02-06 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
  * firebug-lite.js: Removed firebug.env.override to prevent problems when override is set in FF3 where window.console
    is a getter and allow more control over initialization.